Adjust bg on mobile to stop small scrollbar

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ html {
 @media screen and (max-width: 1000px) {
 
     html {
-        background: url('./small_backround.jpg') no-repeat fixed center;
+        background: url('./small_backround.jpg') no-repeat center;
         background-size: cover;
         background-color: gray;
         font-family: 'Bodoni Moda', serif;
